made header position fixed on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,6 +76,10 @@ button {
         font-size: 0.95rem;
     }
 
+    main {
+        margin-top: 100px;
+    }
+
     div.mobile-nav a {
         font-size: 1.1rem;
     }
